# ieops-aihub

./: .gitignore  .pf_meta.json  .pf_steps.json  Dockerfile  Makefile  README.md  auth.py  db.py  docker-entrypoint.sh  embedder.py  go.mod  go.sum  main.py  models.py  pyproject.toml  search.py
.github/workflows/: ci.yml  publish-bins.yml
alembic/: env.py
alembic/versions/: 0001_initial_v3_schema.py  0002_api_keys_revoked_at_check.py  0004_ownership_mode.py
app/: artifacts.py  auth.py  conflicts.py  errors.py  gc.py  locks.py  run_attempts.py  schemas.py  v3_app.py  work_items.py
cmd/aihub/: main.go
cmd/polyforge/: main.go
docs/: onboarding.md
docs/design/: polyforge-v1-design.md
internal/auth/: attempt.go  attempt_test.go  bearer.go  bearer_test.go
internal/cli/: artifact.go  artifact_test.go  complete_attempt.go  doctor.go  init.go  init_test.go  machine_user.go  ready.go  stalled.go  version.go
internal/coding/: gh_ops.go  git_ops.go  scenario.go  scenario_test.go
internal/config/: config.go  machine.go  state.go  state_test.go
internal/db/: db.go
internal/domain/: conflicts.go  dependencies.go  errors.go  errors_test.go  gc.go  ids.go  ids_test.go  memory.go  memory_commit_test.go  memory_render_test.go  pgx_err.go  pgx_err_test.go  projects.go  projects_test.go  run_attempts.go  scenario_config.go  work_items.go  work_items_test.go
internal/embedding/: ollama.go  openai.go  provider.go
internal/mcp/: helpers.go  server.go  tools_coding.go  tools_conflicts.go  tools_dependency.go  tools_events.go  tools_lifecycle.go  tools_memory.go  tools_projects.go  tools_release.go  tools_step.go  tools_users.go
internal/render/: document.go  document_test.go  markdown.go  markdown_test.go  style.css
internal/scenario/: protocol.go
internal/server/: helpers.go  idempotency.go  middleware.go  router.go  router_auth_test.go  router_ui_smoke_test.go  routes_artifacts.go  routes_artifacts_test.go  routes_memory.go  routes_projects.go  routes_step.go  ui_embed.go  ui_embed_test.go  ui_handlers_auth.go  ui_handlers_memory.go  ui_handlers_memory_test.go  ui_handlers_queue.go  ui_handlers_queue_test.go  ui_handlers_wi.go  ui_handlers_wi_test.go  ui_helpers.go  ui_middleware.go  ui_middleware_test.go  ui_routes.go  ui_session.go  ui_session_test.go
openapi/: aihub_openapi.yaml
pkg/client/: client.go
routes/: admin.py  memories.py  v3_admin.py  v3_artifacts.py  v3_attempts.py  v3_claim.py  v3_conflicts.py  v3_memories.py  v3_misc.py  v3_whoami.py  v3_work_items.py
scripts/: measure_search_quality.py
tests/: conftest.py  test_asgi_startup.py  test_auth.py  test_embedder.py  test_golden_search.py  test_health.py  test_hybrid_smoke.py  test_memories.py  test_migration.py
tests/fixtures/: golden_corpus.json  (+1 more)
v0/: Makefile  README.md  auth.py  backup.py  main.py
(+202 files in other folders)
