[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ieops-mem"
version = "0.2.3"
description = "Lightweight self-hosted shared memory service for polyforge-v2"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "fastembed>=0.3",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "PyGithub>=2.3",
    "python-ulid>=1.0",
    "pyrage>=0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools]
py-modules = ["main", "db", "models", "embedder", "auth", "backup"]

[tool.setuptools.packages.find]
include = ["routes*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
