[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "polyforge-aihub"
version = "3.0.1"
description = "polyforge v3 backend — PostgreSQL-backed work_items / claim / lease / conflict-predict service. Also serves the legacy /memories/* routes from polyforge-v2 (ieops-mem v0.3.x) during the migration window."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "fastembed==0.3.6",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "PyGithub>=2.3",
    "python-ulid>=1.0",
    "pyrage>=0.1",
    "sqlite-vec==0.1.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "openapi-spec-validator>=0.7",
    "pyyaml>=6",
]

[tool.setuptools]
py-modules = ["main", "db", "models", "embedder", "auth", "backup", "search"]

[tool.setuptools.packages.find]
include = ["routes*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
